--- a/client/pom.xml
+++ b/client/pom.xml
@@ -28,12 +28,12 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-codec-http</artifactId>
-			<version>4.1.0.Beta8</version>
+			<version>4.1.0.CR1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-handler</artifactId>
-			<version>4.1.0.Beta8</version>
+			<version>4.1.0.CR1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.reactivestreams</groupId>
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>com.typesafe.netty</groupId>
 			<artifactId>netty-reactive-streams</artifactId>
-			<version>1.0.0</version>
+			<version>1.0.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.netty</groupId>
