--- a/client/pom.xml
+++ b/client/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>org.asynchttpclient</groupId>
 		<artifactId>async-http-client-project</artifactId>
-		<version>2.0.5-SNAPSHOT</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>async-http-client</artifactId>
@@ -29,11 +29,10 @@
 			<groupId>io.netty</groupId>
 			<artifactId>netty-codec-http</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.asynchttpclient</groupId>
-			<artifactId>netty-resolver-dns</artifactId>
-			<version>${project.version}</version>
-		</dependency>
+			<dependency>
+			    <groupId>io.netty</groupId>
+			    <artifactId>netty-resolver-dns</artifactId>
+			</dependency>
 		<dependency>
 			<groupId>org.reactivestreams</groupId>
 			<artifactId>reactive-streams</artifactId>
