--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.asynchttpclient</groupId>
 	<artifactId>async-http-client-project</artifactId>
 	<name>Asynchronous Http Client Project</name>
-	<version>2.0.5-SNAPSHOT</version>
+	<version>2.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<description>
         The Async Http Client (AHC) library's purpose is to allow Java
@@ -234,7 +234,6 @@
 		</repository>
 	</repositories>
 	<modules>
-		<module>netty-bp</module>
 		<module>client</module>
 		<module>extras</module>
 	</modules>
@@ -264,6 +263,11 @@
 				<groupId>io.netty</groupId>
 				<artifactId>netty-handler</artifactId>
 				<version>${netty.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>io.netty</groupId>
+			    <artifactId>netty-resolver-dns</artifactId>
+			    <version>${netty.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -394,7 +398,7 @@
 		<surefire.redirectTestOutputToFile>true</surefire.redirectTestOutputToFile>
 		<source.property>1.8</source.property>
 		<target.property>1.8</target.property>
-		<netty.version>4.0.36.Final</netty.version>
+		<netty.version>4.1.0.Final</netty.version>
 		<slf4j.version>1.7.21</slf4j.version>
 		<logback.version>1.1.7</logback.version>
 		<log4j.version>1.2.17</log4j.version>
