--- a/netty-bp/codec-dns/pom.xml
+++ b/netty-bp/codec-dns/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.asynchttpclient</groupId>
     <artifactId>netty-bp</artifactId>
-    <version>2.0.11</version>
+    <version>2.0.12-SNAPSHOT</version>
   </parent>
 
   <artifactId>netty-codec-dns</artifactId>
