--- a/netty-bp/resolver-dns/pom.xml
+++ b/netty-bp/resolver-dns/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.asynchttpclient</groupId>
 		<artifactId>netty-bp</artifactId>
-		<version>2.0.11</version>
+		<version>2.0.12-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>netty-resolver-dns</artifactId>
